--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Ignorar archivo de credenciales de Firebase
+/src/main/resources/jurassicpark-firebase-service-account.json
