--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
+# Application Name
 spring.application.name=JurasicPark
+
+# Server Configuration
+server.port=8080
+
+# Logging Configuration
+logging.level.root=INFO
+logging.level.org.springframework=DEBUG
+logging.file.name=logs/jurasicpark.log
+
+# Security Configuration (WebFlux specific)
+spring.security.web.server.debug=true
+
+# Spring Actuator Endpoints
+management.endpoints.web.exposure.include=*
+
+# Firebase Configuration (Example)
+firebase.credentials.file=classpath:firebase-service-account.json
+
+# Custom Application Properties
+jurasicpark.alert.threshold.temperature=40
+jurasicpark.alert.threshold.movement=10
+jurasicpark.alert.threshold.heartbeat=60
+spring.main.web-application-type=reactive
+
